# pydom

./: .drone.yaml  .drone.yml  Dockerfile  README.md  README.yml  pyproject.toml
.github/workflows/: build.yml  docker-image.yml
k8s/: Dockerfile  deployment.yaml  secret.yaml
pydom/: __init__.py  api.py  cozy_client.py  fetch_password.py  models.py  socket.py  test.py
pydom/routes/: cozytouch.py  tydom.py
pydom/schemas/: tydom.py
